--- a/index.html
+++ b/index.html
@@ -20,6 +20,32 @@
 
     <div id="app" v-cloak>
 
+      <header>
+        <div class="container py-3 d-flex justify-content-between align-items-center">
+          <div class="site-title">
+            <h1 class="fs-4">Shopping</h1>
+          </div>
+          <nav class="d-flex justify-content-center">
+            <ul class="d-flex">
+              <li class="px-2"><a href="#">Services</a></li>
+              <li class="px-2"><a href="#">Gallery</a></li>
+              <li class="px-2"><a href="#">About</a></li>
+              <li class="px-2"><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="icon-ctn text-end">
+            <i class="fa-regular fa-star px-2"></i>
+            <i class="fa-solid fa-user px-2"></i>
+            <i class="fa-solid fa-cart-shopping ps-2"></i>
+          </div>
+        </div>
+      </header>
+
+
+      <main>
+        <div class="container"></div>
+      </main>
+
     </div>
     
 
