--- a/index.html
+++ b/index.html
@@ -43,7 +43,18 @@
 
 
       <main>
-        <div class="container"></div>
+        <div class="container d-flex align-items-center">
+          <div class="left">
+            <div class="input-group mb-3">
+              <input type="text" class="form-control ms-type-bar" placeholder="To Do ..." aria-label="Recipient's username" aria-describedby="button-addon2">
+              <button class="btn btn-outline-secondary ms-type-btn" type="button" id="button-addon2">Go!</button>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item ms-li" v-for="(todo, index) in toDoList">{{ todo.text }}</li>
+            </ul>
+          </div>
+          <div class="right"></div>
+        </div>
       </main>
 
     </div>
