--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         <div class="container d-flex align-items-center">
           <div class="left">
             <div class="input-group mb-3">
-              <input type="text" class="form-control ms-type-bar" v-model="toDoAdd" placeholder="To Do ..." aria-label="Recipient's username" aria-describedby="button-addon2">
+              <input type="text" class="form-control ms-type-bar" v-model="toDoAdd" @keyup.enter="addToDoList" placeholder="To Do ..." aria-label="Recipient's username" aria-describedby="button-addon2">
               <button class="btn btn-outline-secondary ms-type-btn" @click="addToDoList" type="button" id="button-addon2">Go!</button>
             </div>
             <ul class="list-group">
               <li class="list-group-item ms-li d-flex justify-content-between align-items-center" :class="{ taskDone : todo.done }" v-for="(todo, index) in toDoList">
                 {{ todo.text }}
                 <div class="cancel-ctn">
-                  <i class="fa-solid fa-xmark" @click="removeToDoList(index)"></i>
+                  <i class="fa-solid fa-xmark" @click=" cancelList(todo)"></i>
                 </div>
               </li>
             </ul>
