--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <title>To Do List Vue.js</title>
 </head>
 <body>
-
+    <!-- vue container  -->
     <div id="app" v-cloak>
-
+       <!-- header  -->
       <header class="d-flex justify-content-between align-items-center">
         <div class="container d-flex justify-content-between">
           <div class="site-title">
@@ -43,8 +43,9 @@
           </div>
         </div>
       </header>
+      <!-- header  -->
 
-
+      <!-- main  -->
       <main>
         <div class="container d-flex align-items-start justify-content-center">
           <div class="left">
@@ -63,15 +64,11 @@
           </div>
         </div>
       </main>
+      <!-- main  -->
 
     </div>
+    <!-- /vue container  -->
     
-
-
-
-
-
-
      <!-- script bootstrap  -->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
      <!-- script Vue  -->
